// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features - LN - Common - Ranking - default Should render ranking acu politica 1`] = `
<div>
  <static
    id="common-ranking-LN-acumulado"
  >
    <div
      class="bg-light-0 py-32"
    >
      <div
        class="flex ai-center gap-12 pt-12 mb-8 border border-top border-thin border-light-100"
      >
        <span
          class="text ln-text --prumo --font-l --font-medium"
        >
          Más leídas de Política
        </span>
        <i
          class="icon"
          style="height: 16.8px;"
        >
          <mock-icon
            fill="#333"
            name="arrow"
          />
        </i>
      </div>
      <ol>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/politica/ladronima-la-medida-que-tomo-una-provincia-contra-los-supermercados-de-federico-braun-nid10062022/"
            target="_self"
            title="“Ladrónima”: la medida que tomó una provincia contra los supermercados de Federico Braun"
          >
            <article
              class="flex gap-12 pb-12 flex-column"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-21-9"
              >
                <img
                  alt="La medida que tomó una provincia contra los supermercados de Federico Braun"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/ubIOk65W-Yb-z3LHF7VMgLFOL_Q=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/SC66ZEZ4M5EKNAWFPSW77DFILA.jpg"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  1
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  “Ladrónima”: la medida que tomó una provincia contra los supermercados de Federico Braun
                </h3>
              </div>
            </article>
          </a>
        </li>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/politica/la-trastienda-de-la-cumbre-un-mensaje-que-sacudio-el-ambiente-y-la-reaccion-de-biden-a-las-palabras-nid09062022/"
            target="_self"
            title="La trastienda de la cumbre: un mensaje que sacudió el ambiente y la reacción de Biden a las palabras de Alberto Fernández"
          >
            <article
              class="flex gap-12 pb-12 flex-row-reverse"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-1-1 w-120 min-w-120"
              >
                <img
                  alt="Un mensaje que sacudió el ambiente y la reacción de Biden a las palabras de Fernández"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/UovdcQVnzKsjVwk1Q3LAY5RL9zc=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/7SRTWTXGOZEEPNHOCAJSKWA7XM.jpg"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  2
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  La trastienda de la cumbre: un mensaje que sacudió el ambiente y la reacción de Biden a las palabras de Alberto Fernández
                </h3>
              </div>
            </article>
          </a>
        </li>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/politica/la-ministra-de-mujeres-generos-y-diversidad-defendio-el-uso-del-lenguaje-inclusivo-en-las-escuelas-nid10062022/"
            target="_self"
            title="La ministra de Mujeres, Géneros y Diversidad defendió el uso del lenguaje inclusivo en las escuelas"
          >
            <article
              class="flex gap-12 pb-12 flex-row-reverse"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-1-1 w-120 min-w-120"
              >
                <img
                  alt="La respuesta de la ministra de Mujeres a la limitación del lenguaje inclusivo en las escuelas porteñas"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/LJca44nP_F_w9IDuHr33LUfzkLg=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/5MQAAY5PBFELVAGUYM4IVOSAKM.jpg"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  3
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  La ministra de Mujeres, Géneros y Diversidad defendió el uso del lenguaje inclusivo en las escuelas
                </h3>
              </div>
            </article>
          </a>
        </li>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/politica/la-rotunda-afirmacion-de-elisa-carrio-si-votas-a-javier-milei-votas-a-un-genocida-nid10062022/"
            target="_self"
            title="La rotunda afirmación de Elisa Carrió: “Si votás a Javier Milei, votás a un genocida”"
          >
            <article
              class="flex gap-12 pb-12 flex-row-reverse"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-1-1 w-120 min-w-120"
              >
                <img
                  alt="Carrió trató a Milei de "genocida" y el economista le contestó"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/_72gnuKUfTM7ELV5ifz4FedndNw=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/3KNFTRQMMVDP7KS3KR6D6C5DMM.jpg"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  4
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  La rotunda afirmación de Elisa Carrió: “Si votás a Javier Milei, votás a un genocida”
                </h3>
              </div>
            </article>
          </a>
        </li>
      </ol>
    </div>
  </static>
</div>
`;

exports[`Features - LN - Common - Ranking - default Should render ranking home 1`] = `
<div>
  <static
    id="common-ranking-rankingHome"
  >
    <div
      class="bg-light-0 py-32"
    >
      <div
        class="flex ai-center gap-12 pt-12 mb-8 border border-top border-thin border-light-100"
      >
        <span
          class="text ln-text --prumo --font-l --font-medium"
        >
          Más leídas
        </span>
        <i
          class="icon"
          style="height: 16.8px;"
        >
          <mock-icon
            fill="#333"
            name="arrow"
          />
        </i>
      </div>
      <ol>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/el-mundo/joe-biden-cuestiona-a-volodimir-zelensky-porque-no-quiso-escuchar-sus-advertencias-sobre-una-nid11062022/"
            target="_self"
            title="Joe Biden cuestiona a Volodimir Zelensky porque “no quiso escuchar” sus advertencias sobre una invasión rusa"
          >
            <article
              class="flex gap-12 pb-12 flex-column"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-21-9"
              >
                <img
                  alt="Biden sorprendió con un duro reproche a Zelensky y recibió una contundente respuesta"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/I13f1ZisXAPECELnpifWUoyxV6M=/298x198/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/QTNS4ODKVND67CBD2TG4BKBIEE.JPG"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  1
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  Joe Biden cuestiona a Volodimir Zelensky porque “no quiso escuchar” sus advertencias sobre una invasión rusa
                </h3>
              </div>
            </article>
          </a>
        </li>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/seguridad/pidieron-que-la-justicia-ordene-de-urgencia-el-abastecimiento-de-combustible-al-avion-de-los-iranies-nid11062022/"
            target="_self"
            title="Pidieron que la Justicia ordene de urgencia el abastecimiento de combustible al avión de los iraníes"
          >
            <article
              class="flex gap-12 pb-12 flex-row-reverse"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-1-1 w-120 min-w-120"
              >
                <img
                  alt="Pidieron que la Justicia ordene de urgencia el abastecimiento de combustible al avión de los iraníes"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/EP3JODbJEb1uFPY--IChzqXpLhw=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2MRHQ6VDLBB6NHAOCRMJ6FCMJY.jpg"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  2
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  Pidieron que la Justicia ordene de urgencia el abastecimiento de combustible al avión de los iraníes
                </h3>
              </div>
            </article>
          </a>
        </li>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/espectaculos/revelan-un-detalle-de-la-supuesta-amante-de-gerard-pique-que-devastaria-a-shakira-nid10062022/"
            target="_self"
            title="Revelan un detalle de la supuesta amante de Gerard Piqué que devastaría a Shakira"
          >
            <article
              class="flex gap-12 pb-12 flex-row-reverse"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-1-1 w-120 min-w-120"
              >
                <img
                  alt="Revelan un detalle de la supuesta amante de Piqué que devastaría a Shakira"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/kyNXOnvGL_E-0StZf0JVar4eKjs=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/JAP5E2RE45GFLC6W6TCF3ZYSQE.jpg"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  3
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  Revelan un detalle de la supuesta amante de Gerard Piqué que devastaría a Shakira
                </h3>
              </div>
            </article>
          </a>
        </li>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/espectaculos/los-8-escalones-del-millon-le-preguntaron-que-haria-si-ganaba-el-dinero-y-su-respuesta-emociono-a-nid11062022/"
            target="_self"
            title="Los 8 escalones del millón: le preguntaron qué haría si ganaba el dinero y su respuesta emocionó a todos"
          >
            <article
              class="flex gap-12 pb-12 flex-row-reverse"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-1-1 w-120 min-w-120"
              >
                <img
                  alt="Le preguntaron qué haría si ganaba el dinero y su respuesta emocionó a todos"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/-yqpEr69xwpnNrofrhLSGPBshXM=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/L7UKRXBQDFEUTOJPZRB6Q7H7F4.png"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  4
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  Los 8 escalones del millón: le preguntaron qué haría si ganaba el dinero y su respuesta emocionó a todos
                </h3>
              </div>
            </article>
          </a>
        </li>
      </ol>
    </div>
  </static>
</div>
`;

exports[`Features - LN - Common - Ranking - default Should render ranking reverse home 1`] = `
<div>
  <static
    id="common-ranking-inverse-home"
  >
    <div
      class="bg-light-0 py-32"
    >
      <div
        class="flex ai-center gap-12 pt-12 mb-8 border border-top border-thin border-light-100"
      >
        <span
          class="text ln-text --prumo --font-l --font-medium"
        >
          Más leídas
        </span>
        <i
          class="icon"
          style="height: 16.8px;"
        >
          <mock-icon
            fill="#333"
            name="arrow"
          />
        </i>
      </div>
      <ol>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/horoscopo/que-personaje-de-la-historia-representa-mejor-a-cada-signo-del-zodiaco-nid11062022/"
            target="_self"
            title="Qué personaje de la historia representa mejor a cada signo del Zodíaco"
          >
            <article
              class="flex gap-12 pb-12 flex-column"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-21-9"
              >
                <img
                  alt="Qué personaje de la historia representa mejor a cada signo del Zodíaco"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/0wR7Z-alxXX59KR5dVn1L7cID-c=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/2RPWGT3YGNEBNEEYAALVWGX3HU.jpg"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  1
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  Qué personaje de la historia representa mejor a cada signo del Zodíaco
                </h3>
              </div>
            </article>
          </a>
        </li>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/revista-hola/nueva-casa-en-punta-natalia-oreiro-en-un-terreno-de-2600-metros-cuadrados-construye-su-refugio-con-nid10062022/"
            target="_self"
            title="Nueva casa en Punta. Natalia Oreiro: en un terreno de 2600 metros cuadrados construye su refugio con vistas a Laguna del Sauce"
          >
            <article
              class="flex gap-12 pb-12 flex-row-reverse"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-1-1 w-120 min-w-120"
              >
                <img
                  alt="Natalia Oreiro construye en un terreno de 2600 metros cuadrados su refugio con vistas a Laguna del Sauce"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/P5g3BcG9oDYqViFmBBhx6jOGQtQ=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FNC5RDVR4VHCZPXZYWXR67UY5U.jpg"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  2
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  Nueva casa en Punta. Natalia Oreiro: en un terreno de 2600 metros cuadrados construye su refugio con vistas a Laguna del Sauce
                </h3>
              </div>
            </article>
          </a>
        </li>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/lifestyle/donde-esta-el-segundo-tigre-el-desafio-visual-que-solo-el-1-logra-descubrir-nid10062022/"
            target="_self"
            title="¿Dónde está el segundo tigre? El desafío visual que solo el 1% logra descubrir"
          >
            <article
              class="flex gap-12 pb-12 flex-row-reverse"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-1-1 w-120 min-w-120"
              >
                <img
                  alt="¿Dónde está el segundo tigre? El desafío visual que solo el 1% logra descubrir"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/GwkS3ApeooB4wIQQw4FlKZYQgZc=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/BODWGDUWQVD7JOXSDJD2XSMDXU.jpg"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  3
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  ¿Dónde está el segundo tigre? El desafío visual que solo el 1% logra descubrir
                </h3>
              </div>
            </article>
          </a>
        </li>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/lifestyle/por-que-es-feriado-el-17-y-el-20-de-junio-en-la-argentina-nid10062022/"
            target="_self"
            title="¿Por qué es feriado el 17 y el 20 de junio en la Argentina?"
          >
            <article
              class="flex gap-12 pb-12 flex-row-reverse"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-1-1 w-120 min-w-120"
              >
                <img
                  alt="¿Por qué es feriado el 17 y el 20 de junio en la Argentina?"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/o_4XYrqgs6scyfYC1VA3L0vz98g=/298x198/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VNNDYTONXJAZBJ4D4N355LX2NI.jpg"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  4
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  ¿Por qué es feriado el 17 y el 20 de junio en la Argentina?
                </h3>
              </div>
            </article>
          </a>
        </li>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/lifestyle/se-probo-un-vestido-en-una-famosa-tienda-y-tuvo-una-desopilante-reaccion-al-ver-como-le-quedo-nid10062022/"
            target="_self"
            title="Se probó un vestido en una famosa tienda y tuvo una desopilante reacción al ver cómo le quedó"
          >
            <article
              class="flex gap-12 pb-12 flex-row-reverse"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-1-1 w-120 min-w-120"
              >
                <img
                  alt="Se probó un vestido en una famosa tienda y tuvo una desopilante reacción al ver cómo le quedó"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/HRUVcv52e2RMDegZwK8WyX0VQZA=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/VZRLNMP4C5E3TM6XKSRQE4DXNM.jpg"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  5
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  Se probó un vestido en una famosa tienda y tuvo una desopilante reacción al ver cómo le quedó
                </h3>
              </div>
            </article>
          </a>
        </li>
        <li
          class="pb-8 mb-8 border border-bottom border-thin border-neutral-light-100"
          data-article-box="Ranking"
        >
          <a
            class="link ln-link --unstyled"
            href="/revista-hola/soy-una-viuda-eterna-chloe-bello-habla-de-amor-de-los-lugares-oscuros-de-los-que-se-alejo-y-de-los-nid11062022/"
            target="_self"
            title="Chloé Bello habla de amor, de los “lugares oscuros” del pasado y de los “hijos costumizados”  "
          >
            <article
              class="flex gap-12 pb-12 flex-row-reverse"
            >
              <div
                class="ln-placeholder flex jc-center ai-center relative overflow-hidden h-100 bg-light-200 ratio-1-1 w-120 min-w-120"
              >
                <img
                  alt="Chloé Bello, la ex novia de Cerati, habla de los lugares oscuros del pasado y los “hijos costumizados”"
                  class="image flex absolute w-100 h-100 --cover"
                  decoding="async"
                  fetchpriority="low"
                  loading="lazy"
                  src="https://resizer.glanacion.com/resizer/rcVpA1Dk1Flbwkcu5qSMUHgmWKQ=/298x198/smart/filters:format(webp):quality(80)/cloudfront-us-east-1.images.arcpublishing.com/lanacionar/FUPAFXM6CNBXZLNIXVMAEZ3J4I.jpg"
                  style="object-fit: cover;"
                />
              </div>
              <div
                class="flex gap-12 flex-grow-1"
              >
                <span
                  class="text ln-text as-start --prumo --font-medium --font-ranking"
                >
                  6
                </span>
                <h3
                  class="text ln-text title text-16 flex-grow-1"
                >
                  Chloé Bello habla de amor, de los “lugares oscuros” del pasado y de los “hijos costumizados”  
                </h3>
              </div>
            </article>
          </a>
        </li>
      </ol>
    </div>
  </static>
</div>
`;
